# fcitx5-rime

./: CMakeLists.txt
gui/: CMakeLists.txt  addshortcutdialog.cpp  addshortcutdialog.h  addshortcutdialog.ui  configmain.cpp  configmain.h  configmain.ui  configparser.cpp  configparser.h  fcitx-rime-config.json  keyseq.cpp  keyseq.h  schemamodel.cpp  schemamodel.h  shortcutmodel.cpp  shortcutmodel.h
